# order-manager

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  deployment.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
db/: schema.sql
db/migrations/: 20210310165932_create_positions_table.sql  20210311201813_create_strategies_table.sql  20210311201822_create_tickers_table.sql  20210312190019_create_orders_table.sql  20210623223745_create_pending_orders_table.sql  20210623223850_create_lots_table.sql  20210623223855_create_claims_table.sql  20210623223901_create_allocations_table.sql  20210623223910_create_dependent_orders_table.sql
migrations/: 11__create_dependent_trades_table.sql  12__drop_lots.sql  13__create_lots_table.sql  15__add_status_column_to_pending_trades.sql  20210604183124_create_strategies_table.sql  20210604183506_create_pending_orders_table.sql  20210621215354_create_lots_table.sql  20210621215529_create_claims_table.sql  20210623150617_create_dependent_orders_table.sql  20211214172923_create_lots_table.sql  20211214172929_create_claims_table.sql  20211214172935_create_allocations_table.sql  20211214172957_add_id_column_to_allocations.sql  20211214173007_create_delayed_intents_table.sql  20211214173020_drop_pending_orders_table.sql  20211214173030_create_pending_trades_table.sql  20211214173052_drop_dependent_orders_table.sql  20211214173104_create_dependent_trades_table.sql  20211214173113_drop_lots_table.sql  20211214173120_create_lots_table.sql  20211214173131_add_datetime_column_to_pending_trades.sql  20211214173141_add_status_column_to_pending_trades.sql  20211214173202_add_limit_price_column_to_claims.sql  20211214173212_add_claim_id_column_to_pending_trades.sql  20211214173220_add_claim_constraint.sql  20211214182315_remove_claim_id_column_from_pending_trades.sql  20211214182327_create_positions_view.sql  20211214182341_add_before_column_to_claims.sql  20211214182354_rename_pending_trades_to_trades.sql  20211214182408_add_broker_id_to_trades.sql  20211214182418_make_status_column_enum.sql  2__create_lots_table.sql  6__add_id_column_to_allocations.sql  7__create_delayed_intents_table.sql  V10__drop_dependent_orders.sql  V14__add_datetime_column_to_pending_trades.sql  V16__add_limit_price_column_to_claims.sql  V17__add_claim_id_column_to_claims.sql  V18__add_claim_constraint.sql  V19__remove_claim_id_column_from_pending_trades.sql  (+13 more)
scripts/: init_db.sh  init_redis.sh  kafka.yml
src/: db.rs  event_sender.rs  intent_scheduler.rs  kafka.rs  lib.rs  main.rs  manager.rs  metrics.rs  order.rs  order_generator.rs  order_sender.rs  policy.rs  price_updater.rs  redis.rs  settings.rs  trade_sender.rs  webserver.rs
src/db/: allocations.rs  claims.rs  delayed_orders.rs  dependent_order.rs  dependent_orders.rs  dependent_trades.rs  lots.rs  mod.rs  order.rs  order_intent.rs  pending_orders.rs  pending_trades.rs  position.rs  positions.rs  scheduled_intents.rs  trades.rs  utils.rs
src/manager/: allocation.rs  dependent_orders.rs  input.rs  intents.rs  lot.rs  mod.rs  order_updates.rs  pending_orders.rs
src/manager/db/: allocations.rs  claims.rs  dependent_orders.rs  lots.rs  mod.rs  orders.rs  pending_orders.rs
src/order_manager/: dependent_orders.rs  dependent_trades.rs  input.rs  intents.rs  mod.rs  order_updates.rs  reconciliation.rs  risk_check.rs
src/types/: allocation.rs  claim.rs  lot.rs  mod.rs  owner.rs  pending_orders.rs  pending_trades.rs  position.rs  trades.rs
tests/integration/: helpers.rs  intents.rs  main.rs  order_events.rs  order_message.rs  position_intents.rs  setup.rs  teardown.rs
