[package]
name = "order-manager"
version = "6.1.5"
authors = ["Sebastian Rollen <seb@overmu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpaca = {git = "ssh://git@github.com/Overmuse/alpaca.git", tag = "v0.7.0", default-features = false, features = ["rest", "ws"]}
anyhow = "1.0.39"
chrono = "0.4.19"
config = "0.10.1"
dotenv = "0.15.0"
futures = "0.3.15"
kafka-settings = {git = "ssh://git@github.com/Overmuse/kafka-settings.git", tag = "v0.3.1" }
lazy_static = "1.4.0"
num-traits = "0.2.14"
position-intents = {git = "ssh://git@github.com/Overmuse/position-intents.git", tag = "v0.6.0" }
prometheus = "0.12.0"
rdkafka = { version = "0.26.0", features = ["ssl-vendored"] }
refinery = { version = "0.5.0", features = ["tokio-postgres"] }
rust_decimal = { version = "1.14.1", features = ["tokio-pg"] }
serde = "1.0.124"
serde_json = "1.0.64"
serde_plain = "0.3.0"
tokio = {version = "1.2", features = ["macros", "rt-multi-thread"]}
tokio-postgres = { version = "0.7.2", features = ["with-chrono-0_4", "with-uuid-0_8"] }
tokio-util = { version = "0.6.7", features = ["time"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
uuid = "0.8.2"
warp = "0.3.1"

[dev-dependencies]
rdkafka = "0.26.0"
tracing-log = "0.1.2"
