[package]
name = "order-manager"
version = "9.0.0"
authors = ["Sebastian Rollen <seb@overmu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpaca = {git = "ssh://git@github.com/Overmuse/alpaca.git", tag = "v0.7.1", default-features = false, features = ["rest", "ws"]}
anyhow = "1.0"
chrono = "0.4"
config = "0.11"
dotenv = "0.15"
futures = "0.3"
kafka-settings = {git = "ssh://git@github.com/Overmuse/kafka-settings.git", tag = "v0.3.1" }
mobc = "0.7.3"
mobc-redis = "0.7.0"
num-traits = "0.2"
polygon = { git = "ssh://git@github.com/Overmuse/polygon", tag = "v0.11.0" }
rdkafka = { version = "0.26", features = ["ssl-vendored"] }
redis = { version = "0.19.0", features = ["aio", "tokio-comp"] }
refinery = { version = "0.6", features = ["tokio-postgres"] }
rust_decimal = { version = "1.14", features = ["tokio-pg"] }
serde = "1.0"
serde_json = "1.0"
serde_plain = "0.3"
tokio = {version = "1.2", features = ["macros", "rt-multi-thread"]}
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-0_8"] }
tokio-util = { version = "0.6", features = ["time"] }
tracing = "0.1"
tracing-subscriber = "0.2"
trading-base = {git = "ssh://git@github.com/Overmuse/trading-base.git", tag = "v0.4.0" }
uuid = "0.8"
warp = "0.3"

[dev-dependencies]
rdkafka = "0.26"
tracing-log = "0.1"
